--- a/src/styles.css
+++ b/src/styles.css
@@ -8,54 +8,6 @@ body {
   padding: 0;
 }
 
-h1 {
-  margin-top: 0;
-  font-size: 22px;
-}
-
-h2 {
-  margin-top: 0;
-  font-size: 20px;
-}
-
-h3 {
-  margin-top: 0;
-  font-size: 18px;
-}
-
-h4 {
-  margin-top: 0;
-  font-size: 16px;
-}
-
-h5 {
-  margin-top: 0;
-  font-size: 14px;
-}
-
-h6 {
-  margin-top: 0;
-  font-size: 12px;
-}
-
-code {
-  font-size: 1.2em;
-}
-
-ul {
-  padding-inline-start: 20px;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: sans-serif;
-  margin: 20px;
-  padding: 0;
-}
-
 .square {
   background: #fff;
   border: 1px solid #999;
@@ -90,11 +42,16 @@ body {
 }
 
 .super-game-boards {
-  display: grid;
-  gap: 12px;
+  display: inline-grid;
+  gap: 36px;
   grid-template-columns: repeat(3, 1fr);  
+  aspect-ratio: 1;
 }
 
-.super-game-boards > .game-board {
-  aspect-ratio: 1;;
+/* .game-board {
+
+} */
+
+.active {
+ box-shadow: 2px -1px 19px 2px rgba(151, 161, 207, 0.75);
 }
